# volmix

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile.am  README.md  autogen.sh  build-package.sh  configure.ac
.github/: ACTIONS.md
.github/workflows/: build-package.yml  create-release.yml  release-on-tag.yml
debian/: autoreconf.after  autoreconf.before  changelog  control  copyright  install  rules
src/: Makefile  Makefile.am  Makefile.in  pulse_client.c  pulse_client.h  volmix  volmix.c  volume.c
